--- a/public/add_user.html
+++ b/public/add_user.html
@@ -383,7 +383,7 @@
 															Full Name*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter full name" ng-model="newUser.fname">
+															<input class="form-control m-input" type="text" placeholder="enter full name" ng-model="newUser.name">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -399,7 +399,7 @@
 															Role ID*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter role id" ng-model="newUser.rid">
+															<input class="form-control m-input" type="text" placeholder="enter role id" ng-model="newUser.role_id">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -415,7 +415,7 @@
 															Phone No.*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter phone no." ng-model="newUser.phone">
+															<input class="form-control m-input" type="text" placeholder="enter phone no." ng-model="newUser.telephone">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -447,7 +447,7 @@
 															Postal Code*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter postal code" ng-model="newUser.postal">
+															<input class="form-control m-input" type="text" placeholder="enter postal code" ng-model="newUser.postal_code">
 														</div>
 													</div>
 													<div class="m-form__seperator m-form__seperator--dashed m-form__seperator--space-2x"></div>
@@ -463,7 +463,7 @@
 															Password*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="password" placeholder="enter password" ng-model="newLogin.password" required>
+															<input class="form-control m-input" type="password" placeholder="enter password" ng-model="newUser.password" required>
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -471,7 +471,7 @@
 															Retype Password*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="password" placeholder="retype password" ng-model="newLogin.confirmPassword" required>
+															<input class="form-control m-input" type="password" placeholder="retype password" ng-model="newUser.confirmPassword" required>
 														</div>
 													</div>
 												</div>
@@ -823,6 +823,7 @@
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
 		<script type="text/javascript" src="./javascripts/user-controller.js"></script>
 		<!--end::src to ng-app and ng-controller-->
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 	</body>
 	<!-- end::Body -->
 </html>
