--- a/public/users.html
+++ b/public/users.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" ng-app="MainApp" ng-controller="App-controller-user">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title>
@@ -352,7 +352,7 @@
 				<div class="m-grid__item m-grid__item--fluid m-wrapper">
 					<!-- BEGIN: Subheader -->
 					<!-- END: Subheader -->
-					<div class="m-content">
+					<div class="m-content" ng-app="MainApp">
 						<div class="m-portlet m-portlet--mobile m-portlet--rounded">
 							<div class="m-portlet__head">
 								<div class="m-portlet__head-caption">
@@ -366,7 +366,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="m-portlet__body">
+							<div class="m-portlet__body"  ng-controller="App-controller-check">
 								<!--begin: Search Form -->
 								<div class="m-form m-form--label-align-right m--margin-bottom-30">
 									<div class="row align-items-center">
@@ -399,7 +399,7 @@
 								</div>
 								<!--end: Search Form -->
 								<!--begin: Datatable -->
-								<div class="m_datatable" id="local_data"></div>
+								<div class="m_datatable" id="local_data" ng-model="datatbl"></div>
 								<!--end: Datatable -->
 							</div>
 						</div>
@@ -721,12 +721,17 @@
 		<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
-		<script src="javascripts/usertable.js" type="text/javascript"></script>
+		<!--<script type="text/javascript" src="assets/js/users.js"></script>-->
 		<!--end::Page Snippets -->
 
 		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
-		<script type="text/javascript" src="./javascripts/user-controller.js"></script>
+		<script type="text/javascript" src="./javascripts/check.js"></script>   <!--need to link this one and romove user.js-->
+		<!--<script type="text/javascript" src="./javascripts/usertable.js"></script>-->
+
+
+
+		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 	</body>
 	<!-- end::Body -->
 </html>
