--- a/public/edit_user.html
+++ b/public/edit_user.html
@@ -368,7 +368,7 @@
 									</div>
 									<!-------------->
 
-									<div class="tab-content" ng-app="MainApp" ng-controller="App-controller-check">
+									<div class="tab-content" ng-app="MainApp" ng-controller="App-controller-user">
 											<form class="m-form m-form--fit m-form--label-align-right">
 												<div class="m-portlet__body">
 													<div class="form-group m-form__group row">
@@ -431,7 +431,7 @@
 															City*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" value="sample city" ng-model="newUser.city">
+															<input class="form-control m-input" type="text" value="sample city" ng-model="editUser.city">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -791,14 +791,11 @@
 		<!--end::Base Scripts -->
 		<!--begin::Page Snippets -->
 		<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
-		<!--<script type="text/javascript" src="assets/js/users.js"></script>-->
-
 		<!--end::Page Snippets -->
 
 		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
-		<!--<script type="text/javascript" src="./javascripts/check.js"></script>-->
-		<script type="text/javascript" src="./javascripts/check.js"></script>
+		<script type="text/javascript" src="./javascripts/user-controller.js"></script>
 
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 	</body>
