--- a/public/users.html
+++ b/public/users.html
@@ -7,6 +7,7 @@
 			STLS | Users
 		</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 		<script>
           WebFont.load({
             google: {"families":["Poppins:300,400,500,600,700","Roboto:300,400,500,600,700"]},
@@ -723,6 +724,19 @@
 		<!--begin::Page Snippets -->
 		<!--<script type="text/javascript" src="assets/js/users.js"></script>-->
 		<!--end::Page Snippets -->
+
+		<!--<script>$(document).ready(function(){-->
+             <!--$('.m_datatable tbody').on('click', '#edit-user', function () {-->
+                 <!--var tr = $(this).closest('tr');-->
+                 <!--var row = dataTable.row(tr);-->
+                 <!--var rowData = row.data();-->
+
+                 <!--$scope.datasetArray.push(rowData);-->
+                 <!--var json = JSON.stringify(rowData);-->
+             <!--});-->
+
+        <!--});-->
+		<!--</script>-->
 
 		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
