updatetd addJunction ng-modules, update user completed

--- a/public/add_junction.html
+++ b/public/add_junction.html
@@ -393,7 +393,7 @@
 															Street*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter street" ng-model="newStreet.id">
+															<input class="form-control m-input" type="text" placeholder="enter street" ng-model="newJunction.street">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -401,7 +401,7 @@
 															City*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter city" ng-model="newCity.id">
+															<input class="form-control m-input" type="text" placeholder="enter city" ng-model="newJunction.city">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -409,7 +409,7 @@
 															Province*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter province" ng-model="newProvince.id">
+															<input class="form-control m-input" type="text" placeholder="enter province" ng-model="newJunction.province">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -417,7 +417,7 @@
 															Postal Code*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter postal code" ng-model="newPostalcode.id">
+															<input class="form-control m-input" type="text" placeholder="enter postal code" ng-model="newJunction.postal_code">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -447,7 +447,7 @@
 															Pi Mac Address*
 														</label>
 														<div class="col-10">
-															<input class="form-control m-input" type="text" placeholder="enter pi mac address" ng-model="newPiMac.id">
+															<input class="form-control m-input" type="text" placeholder="enter pi mac address" ng-model="newJunction.pi_mac">
 														</div>
 													</div>
 												</div>
