add Junction completed

--- a/public/add_junction.html
+++ b/public/add_junction.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" ng-app="MainApp" ng-controller="App-controller-junction">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<title>
@@ -439,7 +439,7 @@
 															Longtitude*
 														</label>
 														<div class="col-8">
-															<input class="form-control m-input" type="text" placeholder="select longtitude" ng-model="newJunction.longtitude">
+															<input class="form-control m-input" type="text" placeholder="select longtitude" ng-model="newJunction.longitude">
 														</div>
 													</div>
 													<div class="form-group m-form__group row">
@@ -455,7 +455,7 @@
 													<div class="m-form__actions"><center>
 														<div class="row">
 															<div class="col-12">
-																<button type="submit" class="btn btn-primary m-btn m-btn--air m-btn--custom" ng-click="addJuncton()">
+																<button type="submit" class="btn btn-primary m-btn m-btn--air m-btn--custom" ng-click="add()">
 																	Add Junction
 																</button>
 																&nbsp;&nbsp;
