--- a/public/users.html
+++ b/public/users.html
@@ -62,121 +62,7 @@
 							<div id="m_header_topbar" class="m-topbar  m-stack m-stack--ver m-stack--general">
 								<div class="m-stack__item m-topbar__nav-wrapper">
 									<ul class="m-topbar__nav m-nav m-nav--inline">
-										<li class="m-nav__item m-topbar__notifications m-topbar__notifications--img m-dropdown m-dropdown--large m-dropdown--header-bg-fill m-dropdown--arrow m-dropdown--align-right 	m-dropdown--mobile-full-width" data-dropdown-toggle="click" data-dropdown-persistent="true">
-											<a href="#" class="m-nav__link m-dropdown__toggle" id="m_topbar_notification_icon">
-												<span class="m-nav__link-badge m-badge m-badge--dot m-badge--dot-small m-badge--danger"></span>
-												<span class="m-nav__link-icon">
-													<i class="flaticon-music-2"></i>
-												</span>
-											</a>
-											<div class="m-dropdown__wrapper">
-												<span class="m-dropdown__arrow m-dropdown__arrow--right m-dropdown__arrow--adjust"></span>
-												<div class="m-dropdown__inner">
-													<div class="m-dropdown__header m--align-center" style="background: url(assets/images/common/notification_bg.jpg); background-size: cover;">
-														<span class="m-dropdown__header-title">
-															9 New
-														</span>
-														<span class="m-dropdown__header-subtitle">
-															Notifications
-														</span>
-													</div>
-													<div class="m-dropdown__body">
-														<div class="m-dropdown__content">
-																<div class="m-scrollable" data-scrollable="true" data-max-height="250" data-mobile-max-height="200">
-																	<div class="m-list-timeline m-list-timeline--skin-light">
-																		<div class="m-list-timeline__items">
-																			<div class="m-list-timeline__item">
-																				<span class="m-list-timeline__badge -m-list-timeline__badge--state-success"></span>
-																				<span class="m-list-timeline__text">
-																					New junction added
-																				</span>
-																				<span class="m-list-timeline__time">
-																					Just now
-																				</span>
-																			</div>
-																			<div class="m-list-timeline__item">
-																				<span class="m-list-timeline__badge"></span>
-																				<span class="m-list-timeline__text">
-																					New admin added
-																					<span class="m-badge m-badge--success m-badge--wide">
-																						pending
-																					</span>
-																				</span>
-																				<span class="m-list-timeline__time">
-																					14 mins
-																				</span>
-																			</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span class="m-list-timeline__text">
-																						Admin john doe edited his account
-																					</span>
-																					<span class="m-list-timeline__time">
-																						20 mins
-																					</span>
-																				</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span class="m-list-timeline__text">
-																						Device overheated 80%
-																						<span class="m-badge m-badge--info m-badge--wide">
-																							settled
-																						</span>
-																					</span>
-																					<span class="m-list-timeline__time">
-																						1 hr
-																					</span>
-																				</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span class="m-list-timeline__text">
-																						System error -
-																						<a href="#" class="m-link">
-																							Check
-																						</a>
-																					</span>
-																					<span class="m-list-timeline__time">
-																						2 hrs
-																					</span>
-																				</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span class="m-list-timeline__text">
-																						Server up
-																					</span>
-																					<span class="m-list-timeline__time">
-																						3 hrs
-																					</span>
-																				</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span class="m-list-timeline__text">
-																						Server down
-																					</span>
-																					<span class="m-list-timeline__time">
-																						5 hrs
-																					</span>
-																				</div>
-																				<div class="m-list-timeline__item">
-																					<span class="m-list-timeline__badge"></span>
-																					<span href="" class="m-list-timeline__text">
-																						New update requested
-																						<span class="m-badge m-badge--danger m-badge--wide">
-																							urgent
-																						</span>
-																					</span>
-																					<span class="m-list-timeline__time">
-																						7 hrs
-																					</span>
-																				</div>
-																			</div>
-																		</div>
-																	</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</li>
+										
 										<li class="m-nav__item m-topbar__user-profile m-topbar__user-profile--img  m-dropdown m-dropdown--medium m-dropdown--arrow m-dropdown--header-bg-fill m-dropdown--align-right m-dropdown--mobile-full-width m-dropdown--skin-light" data-dropdown-toggle="click">
 											<a href="#" class="m-nav__link m-dropdown__toggle">
 												<span class="m-topbar__userpic">
@@ -279,9 +165,9 @@
 			</header>
 			<div class="m-grid__item m-grid__item--fluid m-grid m-grid--ver-desktop m-grid--desktop m-body">
 				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-light ">
-					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-light m-aside-menu--submenu-skin-light" data-menu-vertical="true" data-menu-scrollable="false" data-menu-dropdown-timeout="500">
+					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-light m-aside-menu--submenu-skin-light" data-menu-vertical="true" data-menu-scrollable="true" data-menu-dropdown-timeout="500">
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
-							<li class="m-menu__item " aria-haspopup="true" >
+							<li class="m-menu__item  " aria-haspopup="true" >
 								<a  href="home.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa fa-home"></i>
 									<span class="m-menu__link-title">
@@ -298,14 +184,6 @@
 								Junction
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
-							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="junctions.html" class="m-menu__link m-menu__toggle">
-									<i class="m-menu__link-icon fa fa-road"></i>
-									<span class="m-menu__link-text">
-										Junctions
-									</span>
-								</a>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="control.html" class="m-menu__link m-menu__toggle">
@@ -325,11 +203,11 @@
 							</li>
 							<li class="m-menu__section">
 								<h4 class="m-menu__section-text">
-								Others
+								Manage
 							</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu  m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu m-menu__item--active" aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="users.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-user-circle-o"></i>
 									<span class="m-menu__link-text">
@@ -338,10 +216,10 @@
 								</a>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
-								<a  href="device.html" class="m-menu__link m-menu__toggle">
-									<i class="m-menu__link-icon fa fa-microchip"></i>
+								<a  href="junctions.html" class="m-menu__link m-menu__toggle">
+									<i class="m-menu__link-icon fa fa-road"></i>
 									<span class="m-menu__link-text">
-										Device
+										Junctions
 									</span>
 								</a>
 							</li>
