--- a/public/control.html
+++ b/public/control.html
@@ -370,6 +370,10 @@
 																	<input type="radio" name="nlane1" value="3">
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="nlane1" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -393,6 +397,10 @@
 																	<input type="radio" name="nlane2" value="3">
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="nlane2" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -414,6 +422,10 @@
 																</label>
 																<label class="m-radio m-radio--bold m-radio--state-red"   style="padding: 10px;">
 																	<input type="radio" name="nlane3" value="3" checked>
+																	<span></span>
+																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="nlane3" value="4">
 																	<span></span>
 																</label>
 															</div>
@@ -463,6 +475,10 @@
 																	<input type="radio" name="wlane1" value="3"checked>
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="wlane1" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -486,6 +502,10 @@
 																	<input type="radio" name="wlane2" value="3">
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="wlane2" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -507,6 +527,10 @@
 																</label>
 																<label class="m-radio m-radio--bold m-radio--state-red"   style="padding: 10px;">
 																	<input type="radio" name="wlane3" value="3" >
+																	<span></span>
+																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="wlane3" value="4">
 																	<span></span>
 																</label>
 															</div>
@@ -558,6 +582,10 @@
 																	<input type="radio" name="elane1" value="3">
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="elane1" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -581,6 +609,10 @@
 																	<input type="radio" name="elane2" value="3">
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="elane2" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -602,6 +634,10 @@
 																</label>
 																<label class="m-radio m-radio--bold m-radio--state-red"   style="padding: 10px;">
 																	<input type="radio" name="elane3" value="3" checked>
+																	<span></span>
+																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="elane3" value="4">
 																	<span></span>
 																</label>
 															</div>
@@ -651,6 +687,10 @@
 																	<input type="radio" name="slane1" value="3" checked>
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="slane1" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -674,6 +714,10 @@
 																	<input type="radio" name="slane2" value="3">
 																	<span></span>
 																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="slane2" value="4">
+																	<span></span>
+																</label>
 															</div>
 														</div>
 													</div>
@@ -695,6 +739,10 @@
 																</label>
 																<label class="m-radio m-radio--bold m-radio--state-red"   style="padding: 10px;">
 																	<input type="radio" name="slane3" value="3">
+																	<span></span>
+																</label>
+																<label class="m-radio m-radio--bold"   style="padding: 10px;">
+																	<input type="radio" name="slane3" value="4">
 																	<span></span>
 																</label>
 															</div>
