--- a/public/map-infoWindow-new.html
+++ b/public/map-infoWindow-new.html
@@ -74,9 +74,7 @@
                       </div>
                     </div>
                     <div class="form-group m-form__group">
-                      <label for="fullname" class="col-2 col-form-label">
-                        Current Traffic:
-                      </label>
+                      <div  class="col-2"></div>
                       <div class="col-10">
                         <button class="btn btn-primary m-btn m-btn--air m-btn--custom">
                           View Statistics
