--- a/public/home.html
+++ b/public/home.html
@@ -61,6 +61,7 @@
 							<div id="m_header_topbar" class="m-topbar  m-stack m-stack--ver m-stack--general">
 								<div class="m-stack__item m-topbar__nav-wrapper">
 									<ul class="m-topbar__nav m-nav m-nav--inline">
+
 										<li class="m-nav__item m-topbar__user-profile m-topbar__user-profile--img  m-dropdown m-dropdown--medium m-dropdown--arrow m-dropdown--header-bg-fill m-dropdown--align-right m-dropdown--mobile-full-width m-dropdown--skin-light" data-dropdown-toggle="click">
 											<a href="#" class="m-nav__link m-dropdown__toggle">
 												<span class="m-topbar__userpic">
@@ -116,7 +117,7 @@
 																		</span>
 																	</a>
 																</li>
-																
+
 																<li class="m-nav__separator m-nav__separator--fit"></li>
 																<li class="m-nav__item">
 																	<center><a href="login.html" class="btn m-btn--default btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
@@ -149,7 +150,7 @@
 				<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-light ">
 					<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-light m-aside-menu--submenu-skin-light" data-menu-vertical="true" data-menu-scrollable="true" data-menu-dropdown-timeout="500">
 						<ul class="m-menu__nav  m-menu__nav--dropdown-submenu-arrow ">
-							<li class="m-menu__item  m-menu__item--active" aria-haspopup="true" >
+							<li class="m-menu__item   m-menu__item--active" aria-haspopup="true" >
 								<a  href="home.html" class="m-menu__link ">
 									<i class="m-menu__link-icon fa fa-home"></i>
 									<span class="m-menu__link-title">
@@ -163,8 +164,8 @@
 							</li>
 							<li class="m-menu__section">
 								<h4 class="m-menu__section-text">
-								Junction
-							</h4>
+									Junction
+								</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
@@ -175,7 +176,7 @@
 									</span>
 								</a>
 							</li>
-							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
+							<li class="m-menu__item  m-menu__item--submenu " aria-haspopup="true"  data-menu-submenu-toggle="hover">
 								<a  href="statistics.html" class="m-menu__link m-menu__toggle">
 									<i class="m-menu__link-icon fa fa-bar-chart"></i>
 									<span class="m-menu__link-text">
@@ -185,8 +186,8 @@
 							</li>
 							<li class="m-menu__section">
 								<h4 class="m-menu__section-text">
-								Manage
-							</h4>
+									Manage
+								</h4>
 								<i class="m-menu__section-icon flaticon-more-v3"></i>
 							</li>
 							<li class="m-menu__item  m-menu__item--submenu" aria-haspopup="true"  data-menu-submenu-toggle="hover">
@@ -205,7 +206,7 @@
 									</span>
 								</a>
 							</li>
-							</ul>
+						</ul>
 					</div>
 					<!-- END: Aside Menu -->
 				</div>
@@ -217,8 +218,8 @@
 						<!--Begin::Main Portlet-->
 						<div class="m-portlet m-portlet--rounded">
 							<div class="m-portlet__body  m-portlet__body--no-padding"  >
-								<div class="row m-row--no-padding m-row--col-separator-xl" ng-app="MainApp" ng-controller="App-controller-map">
-									<div id="m_gmap_3" style="height:550px; width: 100%;">
+								<div class="row m-row--no-padding m-row--col-separator-xl" ng-app="MainApp" ng-controller="App-controller-junction">
+									<div id="m_gmap_3" style="height:700px; width: 100%;">
 										<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB693OGyXpXPdwHgeQY03CH_9_okwjReRc"></script>
 									</div>
 								</div>
@@ -549,7 +550,7 @@
 		<!--begin:: src to -angularJs -ng-app -ng-controller -->
 		<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
 		<script type="text/javascript" src="./javascripts/app.main.js"></script>
-		<script type="text/javascript" src="./javascripts/map-load.js"></script>
+		<script type="text/javascript" src="./javascripts/junction-controller.js"></script>
 		<!--end::src to ng-app and ng-controller-->
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 	</body>
