--- a/public/infoWindow-test.html
+++ b/public/infoWindow-test.html
@@ -1,149 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>
-        Metronic | Dashboard
-    </title>
-    <meta name="description" content="Latest updates and statistic charts">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--begin::Web font -->
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
-    <script>
-        WebFont.load({
-            google: {"families":["Poppins:300,400,500,600,700","Roboto:300,400,500,600,700"]},
-            active: function() {
-                sessionStorage.fonts = true;
-            }
-        });
-    </script>
-    <!--end::Web font -->
-    <!--begin::Base Styles -->
-    <link href="assets/css/vendors.bundle.css" rel="stylesheet" type="text/css" />
-    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-    <!--end::Base Styles -->
-    <link rel="shortcut icon" href="assets/demo/default/media/img/logo/favicon.ico" />
-
+    <meta charset="UTF-8">
+    <title>info window</title>
+    <link rel="stylesheet" href="./stylesheets/map-infoWindow.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.js"></script>
     <style>
-        #outer-div{
-            background-color: transparent;
-            width: 100%;
-            height: auto !important;
-
-        }
-        /*style the box*/
-        .gm-style .gm-style-iw {
-            background-color: #3C61AD !important;
-            top: 0 !important;
-            left: 0 !important;
-            width: 100% !important;
-            height: 100% !important;
-            min-height: 120px !important;
-            padding-top: 10px;
-            display: block !important;
-        }
-
-        /*style the p tag*/
-        .gm-style .gm-style-iw #google-popup p{
-            padding: 10px;
-        }
-
-
-        /*style the arrow*/
-        .gm-style div div div div div div div div {
-            background-color: #3C61AD !important;
-            padding: 0;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            color: #fff;
-            font-size: 16px;
-        }
-
-        /*style the link*/
-        .gm-style div div div div div div div div a {
-            color: #f1f1f1;
-            font-weight: bold;
-        }
-
     </style>
 </head>
 <body>
+<div id="outer-div" class="container-fluid">
 
-
-<div class="m-grid__item m-grid__item--fluid m-wrapper" id="outer-div" >
-    <!-- BEGIN: Subheader -->
-    <!-- END: Subheader -->
-    <div class="m-content">
+    <div id="content-div" class="col-12">
         <div class="row">
-            <div class="col-lg-12">
-                <div class="m-portlet">
-                    <div class="m-portlet__head">
-                        <div class="m-portlet__head-caption">
-                            <center>
-                                <div class="m-portlet__head-title">
-                  <span class="m-portlet__head-icon">
-                    <i class="fa fa-road"></i>
-                  </span>
-                                    <h3 class="m-portlet__head-text">Junction Details</h3>
-                                </div></center>
-                        </div>
+            <div class="col-lg-1"></div>
+            <h2 class="col-sm-10">Junction Details</h2>
+        </div>
+        <div id="junction-data" class="container-fluid">
+            <div class="row">
+                <h4 class="col-sm-7">Junction ID:</h4>
+                <h4><span class="label label-default col-sm-11">{{id}}</span></h4>
+            </div>
+            <div class="row">
+                <h4 class="col-sm-7">Junction Name:</h4>
+                <h4><span class="label label-default col-sm-11">{{name}}</span></h4>
+            </div>
+            <div class="row">
+                <h4 class="col-sm-7">:</h4>
+                <h4><span class="label label-default col-sm-11">{{street}}</span></h4>
+            </div>
+        </div>
+        <div id="junction-stats" class="container-fluid">
+            <div class="row">
+                <h4 class="col-sm-6">Current Traffic:</h4>
+            </div>
+            <div id="btn-group" class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-4"></div>
+                    <div class="btn-group" role="group">
+                        <button class="btn btn-primary">View Statistics</button>
                     </div>
-                    <!-------------->
-                    <form class="m-form m-form--fit m-form--label-align-right">
-                        <div class="m-portlet__body">
-
-                            <div class="form-group m-form__group row">
-                                <label for="fullname" class="col-2 col-form-label">
-                                    Junction ID:
-                                </label>
-                                <div class="col-10">
-                                    <input class="form-control m-input" disabled type="text" value="J001">
-                                </div>
-                            </div>
-                            <div class="form-group m-form__group row">
-                                <label for="fullname" class="col-2 col-form-label">
-                                    Junction Name:
-                                </label>
-                                <div class="col-10">
-                                    <input class="form-control m-input" disabled type="text" value="Sample Junction">
-                                </div>
-                            </div>
-                            <div class="form-group m-form__group row">
-                                <label for="fullname" class="col-2 col-form-label">
-                                    Officer in-charge:
-                                </label>
-                                <div class="col-10">
-                                    <input class="form-control m-input" disabled type="text" value="John Doe">
-                                </div>
-                            </div>
-                            <div class="form-group m-form__group row">
-                                <label for="fullname" class="col-2 col-form-label">
-                                    Current Traffic:
-                                </label>
-                                <div class="col-10">
-                                    <button class="btn btn-primary m-btn m-btn--air m-btn--custom">
-                                        View Statistics
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </form>
                 </div>
             </div>
         </div>
+
     </div>
 </div>
+<script type="text/javascript" src="./angular-1.2.28/angular.min.js"></script>
+<script type="text/javascript" src="./javascripts/app.main.js"></script>
+<script type="text/javascript" src="./javascripts/check-junction.js"></script>
 
-
-
-
-<script src="assets/js/vendors.bundle.js" type="text/javascript"></script>
-<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
-
-
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
 </body>
 </html>
