--- a/public/home.html
+++ b/public/home.html
@@ -553,7 +553,7 @@
 		<script type="text/javascript" src="./javascripts/junction-controller.js"></script>
 		<!--end::src to ng-app and ng-controller-->
 		<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB693OGyXpXPdwHgeQY03CH_9_okwjReRc"></script>
+		<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB693OGyXpXPdwHgeQY03CH_9_okwjReRc&callback=initMap"></script>-->
 	</body>
 	<!-- end::Body -->
 </html>
